<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_green"
    tools:context=".view.search.SearchFragment">

    <TextView
        android:id="@+id/searchfragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/search_title"
        android:padding="10dp"
        android:textSize="42sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lookUpCity_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/enter_city_hint_edit_search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchfragment_title" />

    <Button
        android:id="@+id/submitcity_search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_button_title"
        android:layout_margin="50dp"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@+id/lookUpCity_editText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>