<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_green"
    tools:context=".view.HomeFragment">

    <TextView
        android:id="@+id/header_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/home_today_title"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentTemp_tv"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:text="@string/home_current_temp"
        android:layout_marginTop="20dp"
        android:textSize="148sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title_tv" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/night_details_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentTemp_tv">

        <TextView
            android:id="@+id/night_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night_home_title"
            android:textSize="24sp"
            android:textColor="@color/bg_dark_blue"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/arrow_icon_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toRightOf="@+id/night_title_tv"
            app:layout_constraintRight_toLeftOf="@+id/night_currentTemp_tv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_action_arrow_right"
            tools:srcCompat="@drawable/ic_action_arrow_right" />

        <TextView
            android:id="@+id/night_currentTemp_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_night_temp"
            android:textSize="24sp"
            android:textColor="@color/bg_dark_blue"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/weatherIcon_iv"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/night_details_row"
        android:src="@drawable/ic_sunny_solid"/>

    <TextView
        android:id="@+id/weatherStatus_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/home_current_temp_description"
        android:textSize="36sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="#FFF200"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherIcon_iv" />

    <Button
        android:id="@+id/lookUpCity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/home_search_button_title"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>